package me.lobilux.model;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.util.ArrayList;
import java.util.List;

@Entity
@Table(name = "PublisherCatalog")
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class PublisherCatalog {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "name", nullable = false)
    private String name;

    @OneToMany(mappedBy = "publisherCatalog")
    private List<BookCatalog> booksCatalog = new ArrayList<>();
}
