Table AuthorCatalog {
  id int [not null, pk]
  first_name varchar [not null]
  last_name varchar [default: null]
}

Table PublisherCatalog {
  id int [not null, pk]
  name varchar [not null]
}

Table GenreCatalog {
  id int [not null, pk]
  name varchar [not null]
}

Table DeweyClassification {
  id int [not null, pk]
  code varchar [not null]
  description varchar [not null]
  parent_id int [ref: > DeweyClassification.id, default: null]
}

Table BookCatalog {
  id int [not null, pk]
  publisher_catalog_id int [not null, ref: > PublisherCatalog.id]
  dewey_classification_id int [not null, ref: > DeweyClassification.id]
  title varchar [not null]
  isbn varchar(13) [default: null]
  year_of_publication int [not null]
}

Table BookStatusCatalog {
  id int [not null, pk]
  status varchar [not null]
}

Table Book {
  id int [not null, pk]
  status_id int [not null, ref: > BookStatusCatalog.id]
  book_catalog_id int [not null, ref: > BookCatalog.id]
  copy_number int [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (book_catalog_id, copy_number) [unique]
  }
}

Table UserRoleCatalog {
  id int [not null, pk]
  role varchar [not null]
}

Table User {
  id int [not null, pk]
  name varchar [not null]
  user_role_catalog_id int [not null, ref: > UserRoleCatalog.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table LoanStatus {
  id int [not null, pk]
  status varchar [not null]
}

Table Loan {
  id int [not null, pk]
  calculated_by int [ref: > User.id, default: null]
  borrower_id int [not null, ref: > User.id]
  book_id int [not null, ref: > Book.id]
  issued_by int [not null, ref: > User.id]
  received_by int [not null, ref: > User.id]
  loan_date date [not null, default: `now()`]
  due_date date [not null]
  loan_status_id int [not null, ref: > LoanStatus.id]
  return_date date [default: null]
  final_penalty decimal(7,2) [default: null]
  calculated_at timestamp [default: null]
  replacement_fee decimal(7,2) [default: null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table Properties {
  id int [not null, pk]
  penalty_per_day decimal(5, 2) [not null, default: 0]
  penalty_on_non_working_days bool [not null, default: false]
  penalty_multiplier_on_non_working_days decimal(5, 2) [not null, default: 2]
  count_loan_days_on_non_working_days bool [not null, default: false]
  charge_late_fee_and_book_replacement_together bool [not null, default: true]
  max_extensions int [not null, default: 3]
  max_loan_days int [not null, default: 5]
  max_loans_per_user int [not null, default: 3]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Ref: BookCatalog.id <> AuthorCatalog.id
Ref: BookCatalog.id <> GenreCatalog.id